Fixed jumping div

--- a/frontend/css/viewer.css
+++ b/frontend/css/viewer.css
@@ -42,6 +42,8 @@ div {
 
 #data {
     min-height: 258px;
+    max-height: 258px;
+    height: 258px;
     padding-top: 0px;
     margin-top: 20px;
     margin-left: 5px;
@@ -80,7 +82,6 @@ div {
     color: white;
     text-align: center;
     padding: 5px;
-    visibility: hidden;
 }
 
 .stath {
